# python-freezerclient

./: README.rst  requirements.txt  setup.cfg  tox.ini
freezerclient/: main.py
