[metadata]
name = freezerclient
version = 1.2.0
author = Freezer Team
author-email = openstack-dev@lists.openstack.org
summary = CLI interface for OpenStack Freezer
description-file = README.rst
home-page = https://wiki.openstack.org/wiki/Freezer
license = Apache-2
classifier =
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving
keywords =
    freezer
    backup
    openstack
    restore
    disaster recovery
    lvm
    snapshot
    mongodb
    mysql

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts =
    freezer = freezerclient.main:main

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

